# plonkathon

./: .envrc  README.md  prover.py  pyproject.toml  setup.py  verifier.py
