[tool.poetry]
name = "plonkathon"
version = "0.1.0"
description = "A simple Python implementation of PLONK adapted from py_plonk"
authors = ["0xPARC & Vitalik Buterin"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py-ecc = "^7"
merlin_transcripts = { git = "https://github.com/nalinbhardwaj/curdleproofs.pie", rev = "master", subdirectory = "merlin_transcripts" }

[tool.poetry.group.dev.dependencies]
mypy = "^1"
black = "^24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
explicit_package_bases = true
